[2018-05-19]
=======
- Updated R-Tree to use new kNN algorithm, a variant of Hjaltason and Samet
- API Change: Query iterator's reset() now returns 'this'.
- Update 20 use PH-Tree 2.0.1
 

[2018-04-03]
v 1.6.0/1.6.1
=======
- Improved KD-Tree performance
 

[2017-12-04]
v 1.5.0
======= 
- Added QuadtreHC2, i.e. version 2 of the HC quadtree. This version is more space
  efficient by allowing directory nodes to hold data entries, thus avoiding 
  leaf nodes that hold just one data entry.


[2017-11-13]
v 1.4.0
======= 
- Added KD-Tree.
- Improved QuadtreeStats collection

[2017-09-17]
v 1.3.6
======= 
- Added adapter for PH-Tree.

[2017-03-04]
- Integrated pull request from chris0385 with improved R-Tree kNN queries
  for large k.

[2017-01-23]
- Proper HCI usage for quadtree
- Added qtplain

[2017-01-23]
- Moved project to org.tinpin
 

[2017-01-07]
v 1.3.5 
======= 
 - Fixed rare problem with postfix creation. This solves a problem
   with kd-queries and slightly reduces memory consumption. See issue #7.
 

[2016-09-19]
- Changed structure to standard maven structure
- Changed License to Apache License 2.0
- Renamed project from CritBit to zoodb-indexes
- Added quadtree and R*Tree implementations

[2016-01-04]
- Added .travis.yml

v 1.3.4
=======
[2015-10-20]
- Merged CB64 and CB64COW
- Implemented resetable iterators

v 1.3.3
=======
[2015-10-11]
- Fixed 64COW iterators returning empty Entry for queries that shouldn't return anything. 
- Added CHANGELOG
- Pushed to v1.3.3-SNAPSHOT