@@ -6,6 +6,7 @@ TinSpin Indexes
 This is a library of in-memory indexes. They are used in the TinSpin [TinSpin project](http://www.tinspin.org). The library includes:
 
  - Several versions of **critbit** index, with support for 64bit keys (fastest), very long keys, or multi-dimensional keys (interleaved with z-ordering). See details below.
+ - A **CoverTree** implementation which is loosely based on the "Faster Cover Trees" by M. Izbicki and C.R. Shelton
  - A **kD-Tree** implementation. The kD-Tree provides separate implementations for 1NN-queries and kNN-queries. It also has a an optimization  that allows it to use a faster code-path as long as no elements with partially equal coordinates have been removed (see javadoc in code).  
  - An adapter for the **PH-Tree**. This is only an example integration. For high performance applications it is strongly recommended to use the PH-Tree API directly to be able to use features such as reusable iterators, reusable result objects, other data converters, or custom distance functions. 
  - Several multi-dimensional **quadtree** indexes with separate implementations for point data and rectangle data. The implementations are 'region-quadtrees', they split space in 2^k quadratic quadrants in each level.
